--- a/Web/index.html
+++ b/Web/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Guindaille Simulator</title>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://fonts.cdnfonts.com/css/public-pixel" rel="stylesheet" />
+    <style></style>
   </head>
-  <body>
-    <h1>Guindaille Simulator</h1>
+
+  <body style="background-color: #000024; margin: 0; padding: 0">
+    <center>
+      <img src="top.gif" style="width: 100%" />
+      <br /><br /><br />
+      <button
+        type="button"
+        id="start-btn"
+        style="
+          font-family: 'Public Pixel', sans-serif;
+          color: white;
+          background-color: transparent;
+          border-color: transparent;
+          cursor: pointer;
+        "
+      >
+        <h1>Start Game</h1>
+      </button>
+      <br /><br /><br /><br /><br />
+      <img src="bottom.png" style="width: 100%" />
+    </center>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
