--- a/Web/index.html
+++ b/Web/index.html
@@ -8,9 +8,9 @@
     <style></style>
   </head>
 
-  <body style="background-color: #000024; margin: 0; padding: 0">
+  <body style="background-color: #000040; margin: 0; padding: 0">
     <center>
-      <img src="top.gif" style="width: 100%" />
+      <img src="background2.gif" style="width: 100%" />
       <br /><br /><br />
       <button
         type="button"
@@ -23,10 +23,9 @@
           cursor: pointer;
         "
       >
-        <h1>Start Game</h1>
+        <h1 id="button-text">Start Game</h1>
+        <h2 id="log"></h2>
       </button>
-      <br /><br /><br /><br /><br />
-      <img src="bottom.png" style="width: 100%" />
     </center>
     <script type="module" src="/main.js"></script>
   </body>
