--- a/Web/index.html
+++ b/Web/index.html
@@ -4,29 +4,18 @@
     <title>Guindaille Simulator</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css" />
     <link href="https://fonts.cdnfonts.com/css/public-pixel" rel="stylesheet" />
     <style></style>
   </head>
 
-  <body style="background-color: #000040; margin: 0; padding: 0">
-    <center>
+  <body>
       <img src="background2.gif" style="width: 100%" />
       <br /><br /><br />
-      <button
-        type="button"
-        id="start-btn"
-        style="
-          font-family: 'Public Pixel', sans-serif;
-          color: white;
-          background-color: transparent;
-          border-color: transparent;
-          cursor: pointer;
-        "
-      >
+      <button type="button" id="start-btn">
         <h1 id="button-text">Start Game</h1>
         <h2 id="log"></h2>
       </button>
-    </center>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
