--- a/Web/index.html
+++ b/Web/index.html
@@ -24,16 +24,13 @@
         <button class="nes-btn is-success" type="button" id="start-btn">
           Start Game
         </button>
-        <dialog class="nes-dialog" id="dialog-default">
-          <form method="dialog">
-            <p class="title">Dialog</p>
-            <p>Alert: this is a dialog.</p>
-            <menu class="dialog-menu">
-              <button class="nes-btn">Cancel</button>
-              <button class="nes-btn is-primary">Confirm</button>
-            </menu>
-          </form>
-        </dialog>
+        <progress
+          id="sound-bar"
+          class="nes-progress"
+          value="0"
+          max="100"
+          style="display: none"
+        ></progress>
       </div>
     </div>
     <script type="module" src="/main.js"></script>
