--- a/Web/index.html
+++ b/Web/index.html
@@ -4,6 +4,7 @@
     <title>Guindaille Simulator</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/svg" href="vite.svg" />
     <link
       href="https://unpkg.com/nes.css@latest/css/nes.min.css"
       rel="stylesheet"
@@ -24,15 +25,15 @@
         <button class="nes-btn is-success" type="button" id="start-btn">
           Start Game
         </button>
-        <progress
-          id="sound-bar"
-          class="nes-progress"
-          value="0"
-          max="100"
-          style="display: none"
-        ></progress>
       </div>
     </div>
+    <footer class="footer">
+      <span class="nes-text"> Made by 0x2A </span>
+      <a
+        href="https://github.com/AhouLucas/hackathon"
+        class="nes-icon github is-medium"
+      ></a>
+    </footer>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
